# CinemaSplash

./: .gitignore  AUTHORS  Audio.cxx  Audio.hpp  BUGS  CMakeLists.txt  ChangeLog.txt  Cinemasplash.cxx  Cinemasplash.hpp  Config.cxx  Config.hpp  FilePlaylist.cxx  FilePlaylist.hpp  HELP  Help.cxx  Help.hpp  IDevice.cxx  IDevice.hpp  Log.cxx  Log.hpp  MainWindow.cxx  MainWindow.hpp  MessageBox.cxx  MessageBox.hpp  Picture.cxx  Picture.hpp  Playlist.cxx  Playlist.hpp  PropDlg.hpp  README.md  Singleton.hpp  THANKS  TODO  Video.cxx  Video.hpp  VideoDlg.cxx  VideoDlg.hpp  icons.cxx  icons.hpp
internal_res/: makeicon.sh
window_res/: Credit  app.rc
